--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,53 @@
+.header,
+.menu {
+  display: flex;
+}
+
+.header {
+  justify-content: space-between;
+  align-items: center;
+}
+.header .menu {
+  gap: 15px;
+}
+@media screen and (min-width: 500px) {
+  .header .menu {
+    gap: 35px;
+  }
+}
+.header a {
+  font-size: 12px;
+  color: #FF6060;
+  white-space: nowrap;
+}
+@media screen and (min-width: 500px) {
+  .header a {
+    font-size: 24px;
+  }
+}
+.header a:hover {
+  text-decoration: underline;
+}
+.header .logo {
+  width: 145px;
+}
+@media screen and (min-width: 500px) {
+  .header .logo {
+    width: 210px;
+  }
+}
+
 .wrapper {
-  width: 1240px;
+  max-width: 335px;
   margin: auto;
-  margin-top: 40px;
   font-family: "Montserrat";
+  width: 100%;
+}
+@media screen and (min-width: 500px) {
+  .wrapper {
+    max-width: 1240px;
+    margin-top: 40px;
+  }
 }
 .wrapper a {
   text-decoration: none;
