--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,96 @@
+.header,
+.menu {
+  display: flex;
+}
+
+.header {
+  justify-content: space-between;
+  align-items: center;
+}
+.header .menu {
+  gap: 15px;
+}
+@media screen and (min-width: 500px) {
+  .header .menu {
+    gap: 35px;
+  }
+}
+.header a {
+  font-size: 12px;
+  color: #FF6060;
+  white-space: nowrap;
+}
+@media screen and (min-width: 500px) {
+  .header a {
+    font-size: 24px;
+  }
+}
+.header a:hover {
+  text-decoration: underline;
+}
+.header__logo {
+  width: 145px;
+}
+@media screen and (min-width: 500px) {
+  .header__logo {
+    width: 210px;
+  }
+}
+
+.image-top {
+  width: 100%;
+  height: 111px;
+  border-radius: 10px;
+  background: #000000;
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+@media screen and (min-width: 500px) {
+  .image-top {
+    height: 223px;
+    border-radius: 25px;
+    margin-top: 45px;
+  }
+}
+.image-top__image {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  opacity: 0.7;
+  border-radius: 10px;
+}
+@media screen and (min-width: 500px) {
+  .image-top__image {
+    border-radius: 25px;
+  }
+}
+.image-top__text {
+  color: white;
+  position: absolute;
+  font-weight: 200;
+  font-size: 24px;
+  margin-left: 15px;
+  width: 220px;
+}
+@media screen and (min-width: 500px) {
+  .image-top__text {
+    font-size: 48px;
+    width: 100%;
+    text-align: center;
+  }
+}
+
+.about {
+  height: 223px;
+}
+
 .wrapper {
   max-width: 335px;
   margin: auto;
+  margin-top: 20px;
   font-family: "Montserrat";
   width: 100%;
 }
