--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,59 @@
+.location-container {
+  background: none;
+}
+@media screen and (min-width: 500px) {
+  .location-container {
+    border-radius: 25px;
+    padding: 50px;
+    margin: 45px 0;
+    background: #f7f7f7;
+  }
+}
+.location-container ul {
+  gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px 0;
+  padding: 0;
+}
+@media screen and (min-width: 500px) {
+  .location-container ul {
+    gap: 60px;
+    margin: 0;
+  }
+}
+
+.error {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  justify-content: space-evenly;
+}
+.error__description h1 {
+  font-size: 288px;
+  margin: 0;
+  color: #FF6060;
+}
+.error__description p {
+  font-size: 36px;
+  color: #FF6060;
+}
+.error a {
+  font-size: 12px;
+  color: #FF6060;
+  white-space: nowrap;
+}
+@media screen and (min-width: 500px) {
+  .error a {
+    font-size: 18px;
+  }
+}
+.error a:hover {
+  text-decoration: underline;
+}
+
 .header,
 .menu {
   display: flex;
@@ -87,35 +143,62 @@
   height: 223px;
 }
 
-.error {
-  height: 100vh;
+.footer {
+  height: 210px;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  background: #000000;
   display: flex;
-  align-items: center;
   flex-direction: column;
-  text-align: center;
-  justify-content: space-evenly;
+  justify-content: center;
+  align-items: center;
 }
-.error__description h1 {
-  font-size: 288px;
-  margin: 0;
-  color: #FF6060;
+.footer img {
+  max-width: 122px;
+  width: 100%;
 }
-.error__description p {
-  font-size: 36px;
-  color: #FF6060;
-}
-.error a {
+.footer p {
   font-size: 12px;
-  color: #FF6060;
-  white-space: nowrap;
+  color: white;
 }
 @media screen and (min-width: 500px) {
-  .error a {
-    font-size: 18px;
+  .footer p {
+    font-size: 24px;
   }
 }
-.error a:hover {
-  text-decoration: underline;
+
+.location-card {
+  width: 335px;
+  height: 255px;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+  position: relative;
+  display: flex;
+  justify-content: end;
+  flex-direction: column;
+  border-radius: 10px;
+}
+@media screen and (min-width: 500px) {
+  .location-card {
+    width: 340px;
+    height: 340px;
+  }
+}
+.location-card__image {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px;
+  opacity: 0.4;
+}
+.location-card__title {
+  color: white;
+  position: absolute;
+  font-weight: 200;
+  font-size: 18px;
+  margin-left: 15px;
+  width: 200px;
 }
 
 .wrapper {
