--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -202,6 +202,60 @@
   width: 200px;
 }
 
+.slider {
+  margin: 20px 0;
+  position: relative;
+  height: 255px;
+}
+@media screen and (min-width: 500px) {
+  .slider {
+    margin: 40px 0;
+    height: 415px;
+  }
+}
+.slider .slide {
+  opacity: 0;
+  transition-duration: 1s ease;
+}
+.slider .slide-active {
+  opacity: 1;
+  transition-duration: 1s;
+  height: 100%;
+}
+.slider img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px;
+  height: 100%;
+}
+.slider__left-arrow {
+  position: absolute;
+  top: 45%;
+  left: 2%;
+  width: 5%;
+  color: white;
+  cursor: pointer;
+}
+@media screen and (min-width: 500px) {
+  .slider__left-arrow {
+    width: 2%;
+  }
+}
+.slider__right-arrow {
+  position: absolute;
+  top: 45%;
+  right: 2%;
+  width: 5%;
+  color: white;
+  cursor: pointer;
+}
+@media screen and (min-width: 500px) {
+  .slider__right-arrow {
+    width: 2%;
+  }
+}
+
 .wrapper {
   height: 100vh;
   max-width: 335px;
