--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -256,6 +256,18 @@
   }
 }
 
+.rating {
+  display: flex;
+}
+.rating__active-star {
+  color: #FF6060;
+  width: 3%;
+}
+.rating__star {
+  color: #E3E3E3;
+  width: 3%;
+}
+
 .wrapper {
   height: 100vh;
   max-width: 335px;
