--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,7 @@
 @use "../components/Footer/footer";
 @use "../components/RentalCard/RentalCard";
 @use "../components/Slider/slider";
+@use "../components/Rating/Rating";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 .wrapper {
