--- a/src/components/Rating/_Rating.scss
+++ b/src/components/Rating/_Rating.scss
@@ -1,12 +1,10 @@
 .rating{
     display: flex;
+    gap: 7px;
     &__active-star{
         color: #FF6060;
-        width: 3%;
     }
     &__star{
         color: #E3E3E3;
-        width: 3%;
-        ;
     }
 }
