--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @use "../styles/utils/mixins" as m;
 @use "../pages/Home/Home";
 @use "../pages/Error/error";
+@use "../pages/Rental/Rental";
 @use "../components/Header/Header";
 @use "../components/ImageTop/ImageTop";
 @use "../components/Footer/footer";
