--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @use "../pages/Home/Home";
 @use "../pages/Error/error";
 @use "../pages/Rental/Rental";
+@use "../pages/About/About";
 @use "../components/Header/Header";
 @use "../components/ImageTop/ImageTop";
 @use "../components/Footer/footer";
