finish mobile version

--- a/src/components/Dropdown/_Dropdown.scss
+++ b/src/components/Dropdown/_Dropdown.scss
@@ -1,4 +1,5 @@
 @use "../../styles/utils/variables" as v;
+@use "../../styles/utils/mixins" as m;
 
 .dropdown {
   max-width: 1025px;
@@ -9,7 +10,7 @@
 .dropdown-header {
   background-color: v.$primary-color;
   color: white;
-  padding: 15px;
+  padding: 10px 15px;
   border-radius: 10px;
   display: flex;
   justify-content: space-between;
@@ -25,8 +26,13 @@
   align-items: center;
   color: v.$primary-color;
   border-radius: 10px;
-  height: 200px;
+  height: 180px;
   padding: 0 20px;
+  font-size: 12px;
+  @include m.desktop {
+    font-size: 14px;
+    height: 120px;
+  }
 }
 
 .close{
