--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -10,6 +10,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 30px;
   img {
     max-width: 122px;
     width: 100%;
