--- a/src/pages/Rental/_Rental.scss
+++ b/src/pages/Rental/_Rental.scss
@@ -1,52 +1,76 @@
+@use "../../styles/utils/mixins" as m;
 .rental {
   &__host {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
-    gap: 30px;
     font-weight: 500;
     color: #ff6060;
-    font-size: 18px;
+    font-size: 12px;
+    text-align: end;
+    gap: 15px;
   }
   &__rating {
-    width: 10em;
+    width: 120px;
   }
   &__tags {
     display: flex;
     gap: 1em;
+    font-size: 10px;
+    @include m.desktop {
+      font-size: 14px;
+    }
   }
   &__title {
-    font-size: 36px;
+    font-size: 18px;
     font-weight: 500;
     color: #ff6060;
+    margin-bottom: 10px;
+    @include m.desktop {
+      font-size: 24px;
+    }
   }
   &__location {
     color: #ff6060;
     font-weight: 500;
-    font-size: 18px;
-    margin-bottom: 30px;
+    font-size: 14px;
+    margin-bottom: 15px;
+    @include m.desktop {
+      font-size: 18px;
+    }
   }
   &__host-picture{
     border-radius: 50%;
-    width: 65px;
+    width: 50px;
   }
 }
 
 .informations {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
+  @include m.desktop {
+    flex-direction: row;
+  }
 
   &__right {
+    margin-top: 10px;
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
     gap: 20px;
+    @include m.desktop {
+      flex-direction: column;
+    }
   }
 }
 
 .dropdowns{
-  margin: 15px 0;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  gap: 80px;
+  @include m.desktop {
+    flex-direction: row;
+    gap: 70px;
+  }
 }
