--- a/src/components/ImageTop/_ImageTop.scss
+++ b/src/components/ImageTop/_ImageTop.scss
@@ -4,15 +4,14 @@
 .image-top {
   width: v.$full;
   height: 111px;
-  border-radius: 10px;
-  background: #000000;
+  border-radius: map-get(v.$border-radius, mobile);
+  background: map-get(v.$colors, black);
   position: relative;
-  display: flex;
-  align-items: center;
+  @include m.flex-center;
   margin-top: 20px;
   @include m.desktop {
     height: 223px;
-    border-radius: v.$bradius-desktop;
+    border-radius: map-get(v.$border-radius, desktop);
     margin-top: 45px;
   }
   &__image {
@@ -20,20 +19,20 @@
     height: v.$full;
     object-fit: cover;
     opacity: 0.7;
-    border-radius: 10px;
+    border-radius: map-get(v.$border-radius, mobile);
     @include m.desktop {
-      border-radius: v.$bradius-desktop;
+      border-radius: map-get(v.$border-radius, desktop);
     }
   }
   &__text {
     color: white;
     position: absolute;
     font-weight: 500;
-    font-size: 24px;
+    font-size: map-get(v.$font-sizes, desktop-subtitle);
     margin-left: 15px;
     width: 220px;
     @include m.desktop {
-        font-size: 48px;
+        font-size: map-get(v.$font-sizes, desktop-title);
         width: v.$full;
         text-align: center;
     }
