--- a/src/components/Rating/_Rating.scss
+++ b/src/components/Rating/_Rating.scss
@@ -1,10 +1,11 @@
+@use "../../styles/utils/variables" as v;
 .rating{
     display: flex;
     gap: 7px;
     &__active-star{
-        color: #FF6060;
+        color: map-get(v.$colors, primary);
     }
     &__star{
-        color: #E3E3E3;
+        color: map-get(v.$colors, grey);
     }
 }
