--- a/src/components/Slider/_slider.scss
+++ b/src/components/Slider/_slider.scss
@@ -1,4 +1,5 @@
 @use "../../styles/utils/mixins" as m;
+@use "../../styles/utils/variables" as v;
 .slider{
     margin: 20px 0;
     position: relative;
@@ -14,20 +15,20 @@
     .slide-active{
         opacity: 1;
         transition-duration: 1s;
-        height: 100%;
+        height: v.$full;
     }
     img{
-        width: 100%;
+        width: v.$full;
         object-fit: cover;
-        border-radius: 10px;
-        height: 100%;
+        border-radius: map-get(v.$border-radius, mobile);
+        height: v.$full;
     }
     &__left-arrow{
         position: absolute;
         top: 45%;
         left: 2%;
         width: 5%;
-        color: white;
+        color: map-get(v.$colors, white);
         cursor: pointer;
         @include m.desktop{
             width: 3%;
@@ -38,7 +39,7 @@
         top: 45%;
         right: 2%;
         width: 5%;
-        color: white;
+        color: map-get(v.$colors, white);
         cursor: pointer;
         @include m.desktop{
             width: 3%;
