--- a/src/components/Tag/_Tag.scss
+++ b/src/components/Tag/_Tag.scss
@@ -1,10 +1,11 @@
+@use "../../styles/utils/variables" as v;
+@use "../../styles/utils/mixins" as m;
 .tag{
-    background-color: #FF6060;
-    color: white;
+    background-color: map-get(v.$colors, primary);
+    color: map-get(v.$colors, white);
     padding: 0 15px;
     height: 25px;
     border-radius: 10px;
-    display: flex;
-    align-items: center;
+    @include m.flex-center;
     justify-content: center;
 }
