--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,7 +7,7 @@
     border-radius: 25px;
     padding: 50px;
     margin: 45px 0;
-    background: #f7f7f7;
+    background: #f6f6f6;
   }
 }
 .rental-container ul {
@@ -35,15 +35,15 @@
 .error__description h1 {
   font-size: 100px;
   margin: 0;
-  color: #FF6060;
+  color: #ff6060;
 }
 .error__description p {
   font-size: 15px;
-  color: #FF6060;
+  color: #ff6060;
 }
 .error a {
   font-size: 12px;
-  color: #FF6060;
+  color: #ff6060;
   white-space: nowrap;
 }
 @media screen and (min-width: 500px) {
@@ -117,9 +117,9 @@
 .informations__right {
   margin-top: 10px;
   display: flex;
+  align-items: center;
   flex-direction: row-reverse;
   justify-content: space-between;
-  align-items: center;
   gap: 20px;
 }
 @media screen and (min-width: 500px) {
@@ -142,8 +142,8 @@
 
 .about-dropdowns {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
   margin-top: 15px;
 }
 
@@ -153,20 +153,21 @@
 }
 
 .header {
-  justify-content: space-between;
+  display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .header .menu {
   gap: 15px;
 }
 @media screen and (min-width: 500px) {
   .header .menu {
-    gap: 35px;
+    gap: 30px;
   }
 }
 .header a {
   font-size: 15px;
-  color: #FF6060;
+  color: #ff6060;
   white-space: nowrap;
 }
 @media screen and (min-width: 500px) {
@@ -243,10 +244,10 @@
   width: 100%;
   background: #000000;
   display: flex;
+  align-items: center;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  gap: 30px;
+  gap: 15px;
 }
 .footer img {
   max-width: 122px;
@@ -258,7 +259,7 @@
 }
 @media screen and (min-width: 500px) {
   .footer p {
-    font-size: 24px;
+    font-size: 14px;
   }
 }
 
@@ -355,14 +356,14 @@
   gap: 7px;
 }
 .rating__active-star {
-  color: #FF6060;
+  color: #ff6060;
 }
 .rating__star {
-  color: #E3E3E3;
+  color: #f6f6f6;
 }
 
 .tag {
-  background-color: #FF6060;
+  background-color: #ff6060;
   color: white;
   padding: 0 15px;
   height: 25px;
@@ -379,11 +380,12 @@
 }
 
 .dropdown-header {
-  background-color: #FF6060;
+  background-color: #ff6060;
   color: white;
   padding: 10px 15px;
   border-radius: 10px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   align-items: center;
 }
@@ -395,7 +397,7 @@
   background-color: #f6f6f6;
   display: flex;
   align-items: center;
-  color: #FF6060;
+  color: #ff6060;
   border-radius: 10px;
   height: 180px;
   padding: 0 20px;
@@ -419,7 +421,6 @@
 }
 
 .wrapper {
-  height: 100vh;
   max-width: 335px;
   margin: auto;
   margin-top: 20px;
