--- a/src/components/RentalCard/_RentalCard.scss
+++ b/src/components/RentalCard/_RentalCard.scss
@@ -6,7 +6,7 @@
   background: linear-gradient(
     180deg,
     rgba(255, 255, 255, 0) 0%,
-    rgba(0, 0, 0, 0.5) 100%
+    rgb(0, 0, 0) 100%
   );
   position: relative;
   display: flex;
